JDK 17 support * set the CTCGraphicsEnvironment in CacioTestRunner by using reflection * change CTCGraphicsConfiguration to extend from GraphicsConfiguration * remove dispose method from CTCRobotPeer * remove old methods in ProxyWindowPeer * update poms to source/target 17 * add the required --add-exports for tests * update maven.yml to use JDK 17