@@ -112,8 +112,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
           <configuration>
-            <source>11</source>
-            <target>11</target>
+            <source>17</source>
+            <target>17</target>
             <compilerArgs>
               <arg>-XDignore.symbol.file=true</arg>
             </compilerArgs>
@@ -124,12 +124,26 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.12</version>
           <configuration>
-	    <runOrder>random</runOrder>
+            <runOrder>random</runOrder>
             <systemPropertyVariables>
               <java.awt.headless>false</java.awt.headless>
-              <awt.toolkit>CTCToolkit</awt.toolkit>
               <java.awt.graphicsenv>CTCGraphicsEnvironment</java.awt.graphicsenv>
             </systemPropertyVariables>
+            <argLine>
+              --add-exports=java.desktop/java.awt=ALL-UNNAMED
+              --add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
+              --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED
+              --add-exports=java.desktop/sun.java2d=ALL-UNNAMED
+              --add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED
+              --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+              --add-exports=java.desktop/sun.awt.event=ALL-UNNAMED
+              --add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED
+              --add-exports=java.base/sun.security.action=ALL-UNNAMED
+              --add-opens=java.base/java.util=ALL-UNNAMED
+              --add-opens=java.desktop/java.awt=ALL-UNNAMED
+              --add-opens=java.desktop/sun.java2d=ALL-UNNAMED
+              --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
       </plugins>
